<?xml version="1.0"?>
<package format="2">
  <name>autodriver</name>
  <version>0.0.0</version>
  <description>Autodriver is an autonomous driving robot able to detect lane markings and determine the fastest route around a course.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="samboldon@gmail.com">Sam Boldon</maintainer>
  <maintainer email="idontknowthiswillask@idk.com">Adam Peterson</maintainer>
  
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/autodriver</url> -->

  <author email="samboldon@gmail.com">Sam Boldon</author>
  <author email="seeabovepls@lovethatthisisrequiredtocompile.com">Adam Peterson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>msg_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>msg_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
